# robocom-zero

./: .gitignore  README.md  robocom-zero.cabal  stack.yaml
src/ATrade/: BarAggregator.hs  Exceptions.hs  Quotes.hs  RoboCom.hs
src/ATrade/Backtest/: Execution.hs
src/ATrade/Driver/: Backtest.hs  Junction.hs  Real.hs  Types.hs
src/ATrade/Driver/Junction/: BrokerService.hs  JunctionMonad.hs  OrderRouter.hs  ProgramConfiguration.hs  QuoteStream.hs  QuoteThread.hs  RemoteControl.hs  RobotDriverThread.hs  Types.hs
src/ATrade/Driver/Real/: BrokerClientThread.hs  QuoteSourceThread.hs  Types.hs
src/ATrade/Forums/: Smartlab.hs
src/ATrade/Quotes/: Finam.hs  HAP.hs  HistoryProvider.hs  QHP.hs  QTIS.hs  TickerInfoProvider.hs
src/ATrade/RoboCom/: ConfigStorage.hs  Indicators.hs  Monad.hs  Persistence.hs  Positions.hs  Types.hs  Utils.hs
test/: ArbitraryInstances.hs  Spec.hs
test/Test/: BarAggregator.hs
test/Test/Driver/Junction/: QuoteThread.hs
test/Test/Mock/: HistoryProvider.hs  TickerInfoProvider.hs
test/Test/RoboCom/: Indicators.hs  Positions.hs  Utils.hs
