name:                robocom-zero
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/asakul/robocom-zero#readme
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2021 Denis Tereshkin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-orphans -Wno-type-defaults
  exposed-modules:     ATrade.RoboCom.Indicators
                     , ATrade.RoboCom.Monad
                     , ATrade.RoboCom.Positions
                     , ATrade.RoboCom.Types
                     , ATrade.RoboCom.Utils
                     , ATrade.Quotes
                     , ATrade.Quotes.Finam
                     , ATrade.Quotes.QHP
                     , ATrade.Quotes.QTIS
                     , ATrade.Driver.Real
                     , ATrade.Driver.Backtest
                     , ATrade.Driver.Junction
                     , ATrade.Driver.Junction.Types
                     , ATrade.Driver.Junction.OrderRouter
                     , ATrade.BarAggregator
                     , ATrade.RoboCom
  other-modules:       Paths_robocom_zero
  build-depends:       base >= 4.7 && < 5
                     , libatrade >= 0.9.0.0 && < 0.10.0.0
                     , text
                     , text-icu
                     , errors
                     , lens
                     , bytestring
                     , cassava
                     , containers
                     , time
                     , vector
                     , wreq
                     , safe
                     , hslogger
                     , parsec
                     , parsec-numbers
                     , aeson
                     , binary
                     , binary-ieee754
                     , zeromq4-haskell
                     , unordered-containers
                     , th-printf
                     , BoundedChan
                     , monad-loops
                     , conduit
                     , safe-exceptions
                     , mtl
                     , transformers
                     , list-extras
                     , optparse-applicative
                     , split
                     , signal
                     , random
                     , hedis
                     , gitrev
                     , data-default
                     , template-haskell
                     , unliftio
                     , monad-logger
                     , bimap

  default-language:    Haskell2010
  other-modules:       ATrade.Exceptions
                     , ATrade.Driver.Real.BrokerClientThread
                     , ATrade.Driver.Real.QuoteSourceThread
                     , ATrade.Driver.Types

test-suite robots-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , robocom-zero
                     , libatrade
                     , time
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-golden
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-hspec
                     , quickcheck-text
                     , quickcheck-instances
                     , containers
                     , safe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:     Test.RoboCom.Indicators
                   , Test.RoboCom.Positions
                   , Test.RoboCom.Utils
                   , Test.BarAggregator
                   , ArbitraryInstances

source-repository head
  type:     git
  location: https://github.com/asakul/robocom-zero
