name:                robocom-zero
version:             0.2.1.0
-- synopsis:
-- description:
homepage:            https://github.com/asakul/robocom-zero#readme
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2021 Denis Tereshkin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-orphans -Wno-type-defaults
  exposed-modules:     ATrade.RoboCom.Indicators
                     , ATrade.RoboCom.ConfigStorage
                     , ATrade.RoboCom.Monad
                     , ATrade.RoboCom.Positions
                     , ATrade.RoboCom.Persistence
                     , ATrade.RoboCom.Types
                     , ATrade.RoboCom.Utils
                     , ATrade.Quotes
                     , ATrade.Quotes.QHP
                     , ATrade.Quotes.QTIS
--                     , ATrade.Driver.Backtest
                     , ATrade.Driver.Junction
                     , ATrade.Driver.Junction.Types
                     , ATrade.Driver.Junction.QuoteThread
                     , ATrade.Driver.Junction.QuoteStream
                     , ATrade.Driver.Junction.RobotDriverThread
                     , ATrade.Driver.Junction.ProgramConfiguration
                     , ATrade.Driver.Junction.BrokerService
                     , ATrade.BarAggregator
                     , ATrade.RoboCom
                     , ATrade.Quotes.HistoryProvider
                     , ATrade.Quotes.TickerInfoProvider
  other-modules:       Paths_robocom_zero
  build-depends:       base >= 4.7 && < 5
                     , libatrade >= 0.12.0.0 && < 0.13.0.0
                     , text
                     , text-icu
                     , lens
                     , bytestring
                     , containers
                     , time
                     , vector
                     , safe
                     , aeson
                     , binary
                     , binary-ieee754
                     , zeromq4-haskell
                     , zeromq4-haskell-zap
                     , unordered-containers
                     , hashable
                     , th-printf
                     , BoundedChan
                     , monad-loops
                     , safe-exceptions
                     , mtl
                     , transformers
                     , optparse-applicative
                     , signal
                     , hedis
                     , gitrev
                     , data-default
                     , template-haskell
                     , bimap
                     , dhall
                     , extra
                     , co-log
                     , text-show
                     , unliftio
                     
  default-language:    Haskell2010
  other-modules:       ATrade.Exceptions
                     , ATrade.Driver.Types

test-suite robots-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , robocom-zero
                     , libatrade
                     , time
                     , text
                     , hedgehog
                     , tasty
                     , tasty-hunit
                     , tasty-golden
                     , tasty-hedgehog
                     , tasty-hspec
                     , quickcheck-text
                     , quickcheck-instances
                     , containers
                     , safe
                     , zeromq4-haskell
                     , zeromq4-haskell-zap
                     , BoundedChan
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:     Test.RoboCom.Indicators
                   , Test.RoboCom.Utils
                   , Test.Driver.Junction.QuoteThread
                   , Test.BarAggregator
                   , ArbitraryInstances
                   , Test.Mock.HistoryProvider
                   , Test.Mock.TickerInfoProvider

source-repository head
  type:     git
  location: https://github.com/asakul/robocom-zero
